secondGP/books-app/main/default/objects/Book__c/fields/Authors__c.field-meta.xml
<CustomField>
    <fullName>Authors__c</fullName>
    <label>Authors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>