secondGP/books-app/main/default/objects/Book__c/fields/In_Calenadr__c.field-meta.xml
<CustomField>
    <fullName>In_Calenadr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Calenadr</label>
    <type>Checkbox</type>
</CustomField>