secondGP/books-app/main/default/objects/Book__c/fields/Published_Date__c.field-meta.xml
<CustomField>
    <fullName>Published_Date__c</fullName>
    <label>Published Date</label>
    <length>8</length>
    <type>Text</type>
</CustomField>